# cpe393-mldeploy

./: .gitignore  README.md  pyproject.toml
house-price-regressor/: Dockerfile  README.md  pyproject.toml  requirements.txt
house-price-regressor/app/: main.py
house-price-regressor/model/: regressor.py
iris-classifier/: README.md  pyproject.toml  requirements.txt
iris-classifier/app/: main.py
