[project]
name = "cpe393-mldeploy"
version = "0.1.0"
description = "CPE393 ML deployment assignment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "numpy>=2.2.4",
    "scikit-learn>=1.6.1",
]

[tool.uv.workspace]
members = [
    "iris-classifier",
    "house-price-regressor",
]
